This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
2/7/23: Fixed ReadOtherFile command reading from montage (In 4.0).

2/7/23: Fixed memory leak in pixel size routine, used when Hole Finder is run
from the dialog (In 4.0).

2/7/23: Fixed Hole Finder not applying montage adjustments to positions when
the montage is not a map (In 4.0).

2/4/23: Fixed bad rotation of pattern in multi-hole combiner.

2/2/23: SEM_4-0-19
2/2/23: Fixed bad image shifts when changing EFTEM, broken 1/29/23 (In 4.0).

1/31/23: Added specific error message when serialem module does not have an
attribute, saying that either the command is not recognized or the module
needs updating.

1/31/23: Fixed CalibrateComaVsIS command to use entered values.

1/30/23: Fixed inversion in making IS vectors from hole vectors.

1/29/23: SEM_4-0-18
1/29/23: Prevented crash from pushing Calibrate button in coma vs. image shift
dialog when program is busy.

1/29/23: Added option to the multi-hole combiner to remove or turn off
combined items with fewer than a selected number of holes.

1/29/23: Added ability to toggle points to be included or excluded with the
mouse after finding holes and before making Navigator points.

1/29/23: Added support for grids with hexagonal arrays of holes.  Processing
is slow, not all optimized, and not in the background - be patient.

1/29/23: Fixed so that correct image shift offset calibration is used
when starting with a GIF camera or switching between cameras; for FEI scopes,
made it retain position when switching between GIF and nonGIF (In 4.0).

1/27/23: Made error message include the line that is bad when there is an
error reading a Navigator file in autodoc format (In 4.0).

1/27/23: SEM_4-1-0beta11