@@ -696,7 +696,7 @@ MAC_SAME_NAME_ARG(ForgetPriorState, 0, 4, FORGETPRIORSTATE, i)
 MAC_SAME_NAME_NOARG(CalibrateElectronDose, 0, 4, CALIBRATEELECTRONDOSE)
 MAC_SAME_NAME_NOARG(SaveSettings, 0, 4, SAVESETTINGS)
 MAC_SAME_FUNC_ARG(SetRegularHoleVectors, 4, 4, SetCustomHoleShifts, SETREGULARHOLEVECTORS, DDDDid)
-MAC_SAME_NAME_ARG(CalibrateComaVsIS, 0, 1, CALIBRATECOMAVSIS, di)
+MAC_SAME_NAME_ARG(CalibrateComaVsIS, 0, 1, CALIBRATECOMAVSIS, dii)
 MAC_SAME_NAME_ARG(CalibrateHighFocusIS, 1, 1, CALIBRATEHIGHFOCUSIS, Dd)
 MAC_SAME_NAME_ARG(GetSTEMBrightContrast, 1, 0, GETSTEMBRIGHTCONTRAST, S)
 MAC_SAME_FUNC_ARG(SetSTEMBrightContrast, 3, 0, GetSTEMBrightContrast, SETSTEMBRIGHTCONTRAST, DDS)
@@ -704,6 +704,8 @@ MAC_SAME_NAME_ARG(ReportMontagePiece, 1, 4, REPORTMONTAGEPIECE, I)
 MAC_SAME_NAME_ARG(FindCartridgeWithID, 1, 4, FINDCARTRIDGEWITHID, I)
 MAC_SAME_NAME_ARG(SetTiltIncrement, 1, 4, SETTILTINCREMENT, Ii)
 MAC_SAME_NAME_ARG(SetHoleFinderParams, 3, 4, SETHOLEFINDERPARAMS, DDI)
+MAC_SAME_NAME_ARG(ReportApertureSize, 1, 4, REPORTAPERTURESIZE, I)
+MAC_SAME_NAME_ARG(SetApertureSize, 2, 0, SETAPERTURESIZE, II)
 
 
 // new Python-only commands need to be added to pythonOnlyCmds in ::CMacroProcessor
