@@ -1306,6 +1306,9 @@ makehm /h /a afxhh.h IDW_,HIDW_,0x50000 "%(Filename)%(Extension)" &gt;&gt; "hlp\
     <None Include="hlp\html\hidd_shift_to_marker.htm">
       <DeploymentContent>true</DeploymentContent>
     </None>
+    <None Include="hlp\html\hidd_step_and_adjust_is.htm">
+      <DeploymentContent>true</DeploymentContent>
+    </None>
     <None Include="hlp\html\hidd_tsdosesym.htm">
       <DeploymentContent>true</DeploymentContent>
     </None>
