@@ -52,9 +52,9 @@
            the one for the earlier version should come before the later version.
         <p>Guenter Resch has constructed a web page at <a href="https://www.nexperion.net/basicmodefile">
           https://www.nexperion.net/basicmodefile</a>
-          that will prepare a Basic mode file customized for a specific set of activities; 
-          this should be a good starting point for your own Basic mode file as well as a 
-          good way to put together multiple files for different activities.</p>
+          that will prepare a Basic mode file customized for a specific set of activities;
+           this should be a good starting point for your own Basic mode file.
+        </p>
     <p>An example file for a Basic mode constructed by Tillman Schaefer is available at
       <a href="http://bio3d.colorado.edu/ftp/SerialEM/Tools/SEMbasicModeItems.txt">
             http://bio3d.colorado.edu/ftp/SerialEM/Tools/SEMbasicModeItems.txt</a>.
